src/pages/components/AddingChannel/create-channel.css
.input-group {
    margin-bottom: 20px;
}

label {
    display: block;
    color: #fff;
    margin-bottom: 10px;
    font-size: 15px;
}

input,
textarea {
    padding: 15px;
    width: 100%;
    background: transparent;
    border: 1px solid #999;
    color: #ffffff;
    font-size: 17px;
}

.submit button{
    padding:20px;
    text-align: center;
    /* background-color: #000; */
    /* color:#fff; */
    background-image: url(https://wallpaperaccess.com/full/141914.jpg);
    backdrop-filter: blur(10px);
    width: 100%;
}

